k8s_manifests/minio/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations: {}
  name: minio
  namespace: minio-app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio-console.fahmed.org`)
      services:
        - name: minio-app
          port: 9090
    - kind: Rule
      match: Host(`minio.fahmed.org`)
      services:
        - name: minio-app
          port: 9000
  tls:
    secretName: minio-tls
